[tool.poetry]
name = "hexlet-mind-games"
version = "0.1.0"
description = ""
authors = ["agladche <andrey.gladchenko@megafon.ru>"]
readme = "README.md"
packages = [{include = "hexlet_mind_games"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
say-hello = "hexlet_mind_games.scripts.games:main"